Small CSS fix for correct spacing on autoclassify panel

--- a/ui/css/treeherder-info-panel.css
+++ b/ui/css/treeherder-info-panel.css
@@ -523,7 +523,7 @@ div.talos-panel {
 }
 
 .classification-no-icon {
-  width: 18px;
+  width: 21px;
 }
 
 .manual-bug-input {
